external/qt-everywhere-opensource-src-5.4.1/qtxmlpatterns/tests/auto/xmlpatternsdiagnosticsts/TestSuite/Queries/XQuery/ShouldFail/fail-5.xq
"This xs:string literal is not terminated(syntax error)